# usnjrnl-forensic

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  precision_recall.html
.github/workflows/: pages.yml  release.yml
docs/: TRIAGE_PERFORMANCE.md  TRIAGE_PRECISION_RECALL.md  USN_JOURNAL_TOOLS_RESEARCH.md  VALIDATION.md
docs/plans/: 2026-03-07-rapid-triage-report-design.md  2026-03-07-rapid-triage-report-plan.md
report/: template.html
src/: lib.rs  main.rs
src/analysis/: mod.rs
src/correlation/: mod.rs
src/logfile/: mod.rs  usn_extractor.rs
src/mft/: carver.rs  mod.rs
src/mftmirr/: mod.rs
src/monitor/: mod.rs  windows.rs
src/output/: body_output.rs  csv_output.rs  json_output.rs  mod.rs  report.rs  sqlite_output.rs  stats.rs  tln_output.rs  xml_output.rs
src/refs/: mod.rs
src/rewind/: mod.rs
src/rules/: mod.rs
src/triage/: mod.rs  queries.rs
src/usn/: attributes.rs  carver.rs  mod.rs  parallel.rs  reader.rs  reason.rs  record.rs
tests/: image_integration.rs  precision_recall.rs  report_integration.rs
